<resources>
    <string name="app_name">IP Scanner</string>
    <string name="ip_address">IP address</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="refresh">Refresh</string>
    <string name="support_development">If you really like Ip Scanner, consider supporting the development by sending me a couple of dollars to help running our servers.</string>
    <string name="rate_app">If you like Ip Scanner, Rate it on Google Play Store</string>
    <string name="twitter_handle">\@SlothieSmooth</string>
    <string name="blog_url">https://slothiesmooth.dev</string>
    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="preferences_header">Preferences</string>
    <string name="crashlytics_settings_header">Crash logs</string>

    <!-- Preferences -->
    <string name="dark_theme_title">Dark Theme</string>
    <string name="dark_theme_summary_on">Dark theme is currently active.</string>
    <string name="dark_theme_summary_off">Light theme is currently active.</string>
    <string name="auto_fetch_current_ip_title">Auto fetch current IP details</string>
    <string name="auto_fetch_current_ip_summary_on">Automatically fetch current public IP details on launch.</string>
    <string name="auto_fetch_current_ip_summary_off">Automatic fetch is disabled.</string>

    <!-- Crashlytics Preferences -->
    <string name="crashlytics_title">Crash logs reporting</string>
    <string name="crashlytics_title_summary_on">Crash logs will be sent to Firebase to monitor crashes.</string>
    <string name="crashlytics_title_summary_off">Crash logs will not be sent to Firebase.</string>

</resources>