<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CircularImageView"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAppName"
            style="@style/TextAppearance.IpScanner.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="@+id/ivAppIcon"
            app:layout_constraintStart_toStartOf="@+id/ivAppIcon"
            app:layout_constraintTop_toBottomOf="@+id/ivAppIcon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAppVersion"
            style="@style/TextAppearance.IpScanner.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/ivAppIcon"
            app:layout_constraintStart_toStartOf="@+id/ivAppIcon"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            tools:text="1.0.0-dev" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppVersion" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="GitLab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerTop"
            app:valueText="Ip Scanner is open-source, Check it out on GitLab." />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvIssueTracker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Report Bug"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvRepo"
            app:valueText="Report bugs or request new features" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvSupportDevelopment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Support Development"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvIssueTracker"
            app:valueText="@string/support_development" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvRateApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Rate App"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvSupportDevelopment"
            app:valueText="@string/rate_app" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/lvvRateApp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDeveloper"
            style="@style/TextAppearance.IpScanner.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="Developer"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerMiddle" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvDeveloperTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Twitter"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/tvDeveloper"
            app:startImageSrc="@drawable/ic_twitter"
            app:valueText="@string/twitter_handle" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvDeveloperBlog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Blog"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvDeveloperTwitter"
            app:startImageSrc="@drawable/ic_open_in_new"
            app:valueText="@string/blog_url" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dividerBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/lvvDeveloperBlog" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvPrivacyPolicy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Privacy Policy"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/dividerBottom" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvTermsAndConditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Terms and Conditions"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvPrivacyPolicy" />

        <in.technowolf.ipscanner.ui.customViews.LabelValueView
            android:id="@+id/lvvLicenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:labelText="Licenses"
            app:layout_constraintEnd_toEndOf="@id/lvvRepo"
            app:layout_constraintStart_toStartOf="@id/lvvRepo"
            app:layout_constraintTop_toBottomOf="@id/lvvTermsAndConditions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>